# x3-modsim

./: README.md  build_and_run_tests.sh  enunciado.txt  meson.build  statistics.cpp  statistics.h  utils.h
src/: mean.cpp  mean.h  proportion.cpp  proportion.h  statistics.cpp  statistics.h  utils.h  variance.cpp  variance.h
tests/: mean.cpp  proportion.cpp  utils.h  variance.cpp
